--- a/partyControl/frontend/static/css/index.css
+++ b/partyControl/frontend/static/css/index.css
@@ -15,5 +15,11 @@ html, body {
 #app {
     width: 100%;
     height: 100%;
-    display: flex;
+}
+
+.center {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
